fixed delete track method

--- a/src/views/partials/list-tracks.hbs
+++ b/src/views/partials/list-tracks.hbs
@@ -19,7 +19,8 @@
           {{duration}}
         </td>
         <td>
-        <a href="/dashboard/deletetrack/{{_id}}" class="button">
+        <a href="/playlist/{{../paylist._id}}/deletetrack/{{_id}}" class="button">
+        {{!-- <a href="/dashboard/deletetrack/{{_id}}" class="button"> incorrect --}}
           <span class="icon is-small">
             <i class="fas fa-trash"></i>
           </span>
