--- a/src/views/partials/add-track.hbs
+++ b/src/views/partials/add-track.hbs
@@ -3,7 +3,7 @@
   <div class="field is-horizontal">
     <div class="field-body">
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Title" name="trackTitle">
+        <input class="input" type="text" placeholder="Enter Title" name="title">
       </div>
       <div class="field">
         <input class="input" type="text" placeholder="Enter Artist" name="artist">
