--- a/src/views/group-view.hbs
+++ b/src/views/group-view.hbs
@@ -2,8 +2,8 @@
 
 <section class="section">
   <div class="title">
-    {{playlist.title}}
+    {{group.title}}
   </div>
-  {{> list-tracks}}
-  {{> add-track}}
+  {{> list-lighthouses}}
+  {{> add-lighthouse}}
 </section>
