--- a/src/views/partials/menu.hbs
+++ b/src/views/partials/menu.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-brand">
-    {{> playtime-brand}}
+    {{> lighthouse-brand}}
   </div>
   <div class="navbar-menu" id="navMenu">
     <div class="navbar-end">
