--- a/src/views/partials/add-lighthouse.hbs
+++ b/src/views/partials/add-lighthouse.hbs
@@ -6,10 +6,10 @@
         <input class="input" type="text" placeholder="Enter Title" name="title">
       </div>
       <div class="field">
-        <input class="input" type="number" placeholder="Enter Tower Height" name="towerHeight">
+        <input class="input" type="double" placeholder="Enter Tower Height" name="towerHeight">
       </div>
       <div class="field">
-        <input class="input" type="number" placeholder="Enter Light Height" name="lightHeight">
+        <input class="input" type="double" placeholder="Enter Light Height" name="lightHeight">
       </div>
       <div class="field">
         <input class="input" type="text" placeholder="Enter Character" name="character">
@@ -18,7 +18,13 @@
         <input class="input" type="text" placeholder="Enter Daymark" name="daymark">
       </div>
       <div class="field">
-        <input class="input" type="number" placeholder="Enter Range" name="range">
+        <input class="input" type="double" placeholder="Enter Range" name="range">
+      </div>
+      <div class="field">
+        <input class="input" type="double" placeholder="52.1624" name="latitude">
+      </div>
+      <div class="field">
+        <input class="input" type="double" placeholder="-7.1524" name="longitude">
       </div>
     </div>
   </div>
