--- a/src/views/partials/list-lighthouses.hbs
+++ b/src/views/partials/list-lighthouses.hbs
@@ -12,7 +12,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each lighthouses}}
+    {{#each group.lighthouses}}
      <tr>
       <td>
         {{title}}
