edit profile and lighthouse function attemp

--- a/src/views/partials/list-lighthouses.hbs
+++ b/src/views/partials/list-lighthouses.hbs
@@ -43,6 +43,11 @@
           <i class="fas fa-trash"></i>
         </a>
       </td>
+      <td>
+        <a href="/group/{{../group._id}}/editlighthouse/{{_id}}" class="ui icon button">
+          <i class="fas fa-folder"></i>
+        </a>
+      </td>
      </tr>
     {{/each}}
   </tbody>
