--- a/src/views/partials/edit-lighthouse.hbs
+++ b/src/views/partials/edit-lighthouse.hbs
@@ -1,4 +1,4 @@
-<form class="box" action="/group/{{group._id}}/updatelighthouse/{{lighthouse.id}}" method="POST">
+<form class="box" action="/group/{{group._id}}/updatelighthouse/{{lighthouse._id}}" method="POST">
   <label>Enter Lighthouse Features:</label>
   <div class="field is-horizontal">
     <div class="field-body">
