--- a/src/views/partials/edit-lighthouse.hbs
+++ b/src/views/partials/edit-lighthouse.hbs
@@ -1,9 +1,9 @@
-<form class="box" action="/group/{{group._id}}/updatelighthouse/{{lighthouse.id}}" method="POST">
+<form class="box" action="/group/{{group._id}}/updatelighthouse/{{lighthouse._id}}" method="POST">
   <label>Enter Lighthouse Features:</label>
   <div class="field is-horizontal">
     <div class="field-body">
       <div class="field">
-        <input id="title" class="input" type="text" placeholder="Enter Title" name="{{lighthouse.title}}">
+        <input id="title" name="title" class="input" type="text" placeholder="Enter Title" value="{{lighthouse.title}}">
       </div>
       {{!-- <div class="field">
         <input class="input" type="double" placeholder="Enter Tower Height" name="towerHeight">
