--- a/src/views/partials/list-lighthouses.hbs
+++ b/src/views/partials/list-lighthouses.hbs
@@ -9,6 +9,7 @@
       <th>Range</th>
       <th>latitude</th>
       <th>longitude</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
@@ -45,7 +46,7 @@
       </td>
       <td>
         <a href="/group/{{../group._id}}/editlighthouse/{{_id}}" class="ui icon button">
-          <i class="fas fa-folder"></i>
+          <i class="fas fa-edit"></i>
         </a>
       </td>
      </tr>
