--- a/src/views/partials/list-lighthouses.hbs
+++ b/src/views/partials/list-lighthouses.hbs
@@ -9,6 +9,7 @@
       <th>Range</th>
       <th>latitude</th>
       <th>longitude</th>
+      <th>Temp</th>
       <th>Action</th>
     </tr>
   </thead>
