weather-api-update

--- a/src/views/partials/list-lighthouses.hbs
+++ b/src/views/partials/list-lighthouses.hbs
@@ -50,6 +50,11 @@
           <i class="fas fa-edit"></i>
         </a>
       </td>
+      <td>
+        <a href="/api/{{../group._id}}/generateweather/{{_id}}" class="ui icon button">
+          <i class="fas fa-edit"></i>
+        </a>
+      </td>
      </tr>
     {{/each}}
   </tbody>
