--- a/src/views/partials/edit-lighthouse.hbs
+++ b/src/views/partials/edit-lighthouse.hbs
@@ -6,25 +6,25 @@
         <input id="title" name="title" class="input" type="text" placeholder="Enter Title" value="{{lighthouse.title}}">
       </div>
       <div class="field">
-        <input class="input" name="towerHeight" type="double" placeholder="Enter Tower Height" name="{{lighthouse.towerHeight}}">
+        <input class="input" name="towerHeight" type="double" placeholder="Enter Tower Height" value="{{lighthouse.towerHeight}}">
       </div>
       <div class="field">
-        <input class="input" name="lightHeight" type="double" placeholder="Enter Light Height" name="{{lighthouse.lightHeight}}">
+        <input class="input" name="lightHeight" type="double" placeholder="Enter Light Height" value="{{lighthouse.lightHeight}}">
       </div>
       <div class="field">
-        <input class="input" name="character" type="text" placeholder="Enter Character" name="{{lighthouse.character}}">
+        <input class="input" name="character" type="text" placeholder="Enter Character" value="{{lighthouse.character}}">
       </div>
       <div class="field">
-        <input class="input" name="daymark" type="text" placeholder="Enter Daymark" name="{{lighthouse.daymark}}">
+        <input class="input" name="daymark" type="text" placeholder="Enter Daymark" value="{{lighthouse.daymark}}">
       </div>
       <div class="field">
-        <input class="input" name="range" type="double" placeholder="Enter Range" name="{{lighthouse.range}}">
+        <input class="input" name="range" type="double" placeholder="Enter Range" value="{{lighthouse.range}}">
       </div>
       <div class="field">
-        <input class="input" name="latitude" type="double" placeholder="52.1624" name="{{lighthouse.latitude}}">
+        <input class="input" name="latitude" type="double" placeholder="52.1624" value="{{lighthouse.latitude}}">
       </div>
       <div class="field">
-        <input class="input" name="longitude" type="double" placeholder="-7.1524" name="{{lighthouse.longitude}}">
+        <input class="input" name="longitude" type="double" placeholder="-7.1524" value="{{lighthouse.longitude}}">
       </div>
     </div>
   </div>
