--- a/src/views/partials/map.hbs
+++ b/src/views/partials/map.hbs
@@ -5,13 +5,13 @@
         <script>
             function myMap() {
                 var mapProp= {
-                        center:new google.maps.LatLng({{group.lighthouses.latitude}},{{group.lighthouses.longitude}}),
+                        center:new google.maps.LatLng({{report.latitude}},{{report.longitude}}),
                         zoom:8,
                     };
                     
                     var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
                     var marker = new google.maps.Marker({
-                        position: new google.maps.LatLng({{group.lighthouses.latitude}},{{group.lighthouses.longitude}}), // Van Munching Hall,
+                        position: new google.maps.LatLng({{report.latitude}},{{report.longitude}}), // Van Munching Hall,
                         map: map,
                         title: "Weather"
                     });
