--- a/src/views/partials/list-lighthouses.hbs
+++ b/src/views/partials/list-lighthouses.hbs
@@ -51,7 +51,7 @@
         </a>
       </td>
       <td>
-        <a href="/api/{{../group._id}}/generateweather/{{_id}}" class="ui icon button">
+        <a href="/group/{{../group._id}}/api/{{_id}}" class="ui icon button">
           <i class="fas fa-edit"></i>
         </a>
       </td>
