--- a/src/views/partials/list-groups.hbs
+++ b/src/views/partials/list-groups.hbs
@@ -2,6 +2,7 @@
   <div class="box box-link-hover-shadow">
     <h2 class="title">
       {{title}}
+       {{> map1 }}
     </h2>
     <a href="/group/{{_id}}" class="button">
       <span class="icon is-small">
