--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+    {{!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script> --}}
+    <script src="https://kit.fontawesome.com/dd084b05a9.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/frappe-charts@1.2.4/dist/frappe-charts.min.iife.js"></script>
   </head>
   <body>
     <div class="container">
