--- a/src/views/partials/map1.hbs
+++ b/src/views/partials/map1.hbs
@@ -1,5 +1,6 @@
 <html>
     <body>
+    {{#each groups.lighthouses}}
         <div id="mapCanvas" style="width:100%;height:400px;">
         </div>
         <script>
@@ -17,7 +18,7 @@
                 
             // Multiple markers location, latitude, and longitude
             var markers = [
-                [{{group.lighthouses.title}}, {{report.lat}}, {{report.lng}}],
+                [{{title}}, {{latitude}}, {{longitude}}],
                 
             ];
             
@@ -57,6 +58,7 @@
         window.initMap = myMap;
         </script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3EZ0hE84HVYZJhbtQuvyZb5Ejm_WUP8Q&callback=myMap"></script>
+    {{/each}}
     </body>
 </html>
 
