lighthouse image dev

--- a/src/views/partials/lighthouse-image.hbs
+++ b/src/views/partials/lighthouse-image.hbs
@@ -10,7 +10,7 @@
 <div class="card">
   <div class="card-image">
     <figure class="image is-256x256">
-      <img src={{group.img}}>
+      <img src={{img}}>
     </figure>
   </div>
   <div class="card-content">
