image upload for lighthouse

--- a/src/views/partials/add-group.hbs
+++ b/src/views/partials/add-group.hbs
@@ -1,7 +1,7 @@
 <form action="/dashboard/addgroup" method="POST">
   <div class="field">
     <label class="label">Lighthouse Group Title</label> 
-    <input class="input" type="text" placeholder="Enter Lighthouse name" name="title">
+    <input class="input" type="text" placeholder="Enter Group name" name="title">
   </div>
-  <button class="button is-link">Add Playlist</button>
+  <button class="button is-link">Add Group</button>
 </form>
