--- a/src/views/partials/list-groups.hbs
+++ b/src/views/partials/list-groups.hbs
@@ -12,5 +12,8 @@
     <a href="/dashboard/deletegroup/{{_id}}" class="button">
       <i class="fas fa-trash"></i>
     </a>
+    <a href="/dashboard/editgroup/{{_id}}" class="button">
+      <i class="fas fa-edit"></i>
+    </a>
   </div>
 {{/each}}
