edit image view added

--- a/src/views/partials/list-groups.hbs
+++ b/src/views/partials/list-groups.hbs
@@ -2,7 +2,6 @@
   <div class="box box-link-hover-shadow">
     <h2 class="title">
       {{title}}
-       {{> map1 }}
     </h2>
     <a href="/group/{{_id}}" class="button">
       <span class="icon is-small">
@@ -13,7 +12,7 @@
       <i class="fas fa-trash"></i>
     </a>
     <a href="/dashboard/editgroup/{{_id}}" class="button">
-      <i class="fas fa-edit"></i>
+      <i class="fas fa-pencil"></i>
     </a>
   </div>
 {{/each}}
