--- a/src/views/partials/map.hbs
+++ b/src/views/partials/map.hbs
@@ -17,7 +17,7 @@
                 
             // Multiple markers location, latitude, and longitude
             var markers = [
-                [{{group.lighthouses.title}}, {{report.lat}}, {{report.lng}}],
+                [{{group.lighthouse.title}}, {{report.lat}}, {{report.lng}}],
                 
             ];
             
