--- a/src/views/partials/map2.hbs
+++ b/src/views/partials/map2.hbs
@@ -1,6 +1,6 @@
 <html>
     <body>
-    {{#each groups.lighthouses}}
+        {{#each report}}
         <div id="mapCanvas" style="width:100%;height:400px;">
         </div>
         <script>
@@ -18,7 +18,7 @@
                 
             // Multiple markers location, latitude, and longitude
             var markers = [
-                [{{title}}, {{latitude}}, {{longitude}}],
+                [{{group.lighthouse.title}}, {{report.lat}}, {{report.lng}}],
                 
             ];
             
@@ -58,7 +58,7 @@
         window.initMap = myMap;
         </script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3EZ0hE84HVYZJhbtQuvyZb5Ejm_WUP8Q&callback=myMap"></script>
-    {{/each}}
+        {{/each}}
     </body>
 </html>
 
