--- a/src/views/partials/map2.hbs
+++ b/src/views/partials/map2.hbs
@@ -1,6 +1,5 @@
 <html>
     <body>
-        {{#each report}}
         <div id="mapCanvas" style="width:100%;height:400px;">
         </div>
         <script>
@@ -18,11 +17,11 @@
                 
             // Multiple markers location, latitude, and longitude
             var markers = [
-                [{{group.lighthouse.title}}, {{report.lat}}, {{report.lng}}],
-                
+                {{#each lighthouses}}
+                    ["{{title}}", {{latitude}}, {{longitude}}],
+                {{/each}}
             ];
             
-                
             // Add multiple markers to map
             var infoWindow = new google.maps.InfoWindow(), marker, i;
             
@@ -58,7 +57,6 @@
         window.initMap = myMap;
         </script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3EZ0hE84HVYZJhbtQuvyZb5Ejm_WUP8Q&callback=myMap"></script>
-        {{/each}}
     </body>
 </html>
 
